# Investing_v3

./: README.md  pyproject.toml  todo.md
examples/: example_filter_rule.py  example_to_pandas_mask.py
src/stock_screener/data/data_models/: filter.py  preset.py
src/stock_screener/data/enum/: stock_field.py
src/stock_screener/data/enums/: stock_field.py
src/stock_screener/data/models/: filter.py
src/stock_screener/data/services/: data_fetcher.py  screener.py
src/stock_screener/data/services/filtering/: sql.py
src/stock_screener/data/strategies/: covered_call.py
src/stock_screener/data_models/: filter.py
src/stock_screener/presets/: covered_call.py
src/stock_screener/services/: screener.py
src/stock_screener/services/filtering/: pandas.py  polars.py
tests/models/: test_filter.py  test_filter_label.py
tests/services/: test_screener.py
tests/services/filtering/: test_pandas.py
